# SLAM_ROS

./: README.md
myagv_mpc_controller/: CMakeLists.txt  package.xml
myagv_mpc_controller/include/: kinematic_model.hpp  quintic_trajectory.hpp
myagv_mpc_controller/src/: kinematic_model.cpp
slam_ros/: CMakeLists.txt  package.xml
slam_ros/action/: MoveXY.action
slam_ros/include/: kinematic_model.hpp  mpc_solver.hpp  quintic_trajectory.hpp
slam_ros/launch/: movement_controller.launch.py  movement_recorder.launch.py
slam_ros/src/: movement_controller.cpp  movement_recorder.cpp
